# campusdigitalfp_email_sender

./: README.md  pyproject.toml
.github/workflows/: ci.yml
campusdigitalfp_email_sender/: __main__.py  cli.py  config.py  logger.py  mailer.py  utils.py
tests/: test_cli.py  test_mailer.py  test_utils.py
