[tool.poetry]
name = "campusdigitalfp_email_sender"
version = "0.1.0"
description = "Automatic mail app for CampusDigitalFP projects"
authors = ["Dario Ureña <darioaxel@gmail.com>"]
license = "GLP-3.0"
readme = "README.md"
packages = [{include = "campusvirtualfp_email_sender"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-mock = "^3.11"

[tool.poetry.scripts]
campusvirtualfp_email_sender = "campusvirtualfp_email_sender.__main__:main"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--verbose --cov=campusvirtualfp_email_sender --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


